--- a/3.About dataset.md
+++ b/3.About dataset.md
@@ -1,1 +1,2 @@
 # About dataset
+The dataset consists of 4515 examples and contains Author_name, Headlines, Url of Article, Short text, Complete Article. It contained summarized news from Inshorts and only scraped the news articles from Hindu, Indian times and Guardian. Time period ranges from febrauary to august 2017.
